revise and editing

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#services">Search Engine Optimization</a>
+                    <a href="#search-engine-optomization">Search Engine Optimization</a>
                 </li>
                 <li>
                     <a href="#online-reputation-management">Online Reputation Management</a>
@@ -26,7 +26,7 @@
     </header> 
     <section class="hero"></section>
     <section class="content">
-        <article class="services">
+        <article id="search-engine-optomization"class="services">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Search Engine Optomization"/>
             <h2>Search Engine Optimization</h2>
             <p>
